# smartsqlite

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md  appveyor.yml  build-linux.sh  build-mac.sh  build-osx.sh  build-windows-debug.cmd  build-windows.cmd  connection.cpp  connection.h  connection_test.cpp  coverage.sh  cppcheck.sh  exceptions.cpp  exceptions.h  main.cpp  projectfiles_unchanged.py  result_names.h  statement.cpp  statement.h  statement_test.cpp  util.cpp  util.h  version.cpp  version.h  version_test.cpp
cmake/: CompilerSettings.cmake  smartsqlite-config.cmake
include/: binder.h  nullable.h  statement.h  util.h
include/smartsqlite/: binder.h  blob.h  connection.h  exceptions.h  extractor.h  logging.h  nullable.h  row.h  scopedsavepoint.h  scopedtransaction.h  statement.h  util.h  version.h
include/sqlitewrapper/: binder.h  blob.h  connection.h  exceptions.h  extractor.h  nullable.h  row.h  scopedtransaction.h  statement.h  util.h  version.h
lib/sqlite/: CMakeLists.txt
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  binder.cpp  blob.cpp  connection.cpp  exceptions.cpp  extractor.cpp  logging.cpp  result_names.h  row.cpp  scopedsavepoint.cpp  scopedtransaction.cpp  statement.cpp  util.cpp  version.cpp
src/botansqlite3/: LICENSE.txt  botansqlite3.c  codec.cpp  codec.h  codec_c_interface.h  codecext.c  test_sqlite.cpp
test/: CMakeLists.txt  blob_test.cpp  botansqlite3_test.cpp  connection_test.cpp  exceptions_test.cpp  logging_test.cpp  nullable_test.cpp  scopedsavepoint_test.cpp  scopedtransaction_test.cpp  statement_test.cpp  testutil.h  version_test.cpp
tools/: update_sqlite.sh
